[ENTESB-3702] Enusre example itests are part of the distribution